2010-11-12  Jakub Jelinek  <jakub@redhat.com>

	PR target/46088
	* gcc.dg/pr46088.c: New test.

2010-11-11  Steven G. Kargl  <kargl@gcc.gnu.org>

	* gfortran.dg/empty_derived_type.f90: New test.

2010-11-11  Tobias Burnus  <burnus@net-b.de>

	PR fortran/46413
	* gfortran.dg/class_31.f90: New.

	PR fortran/46205
	* gfortran.dg/forall_14.f90: New.

2010-11-11  Jakub Jelinek  <jakub@redhat.com>
	    Tobias Burnus  <burnus@net-b.de>

	PR fortran/46325
	* gfortran.dg/char_initialiser_actual.f90: Make test case valid. 

2010-11-11  Jan Hubicka  <jh@suse.cz>

	* gcc.dg/20081223-1.c: Update LTO options.
	* gcc.dg/lto/20090206-1_0.c: Update LTO options.
	* gcc.dg/lto/20081118_0.c: Update LTO options.
	* gcc.dg/lto/ipareference_0.c: Update LTO options.
	* gcc.dg/lto/20100423-2_0.c: Update LTO options.
	* gcc.dg/lto/20081201-1_0.c: Update LTO options.
	* gcc.dg/lto/ipacp_0.c: Update LTO options.
	* gcc.dg/lto/20090116_0.c: Update LTO options.
	* gcc.dg/lto/20091015-1_0.c: Update LTO options.
	* gcc.dg/lto/20090126-2_0.c: Update LTO options.
	* gcc.dg/lto/20081202-2_0.c: Update LTO options.
	* gcc.dg/lto/20081204-1_0.c: Update LTO options.
	* gcc.dg/lto/const-uniq_0.c: Update LTO options.
	* gcc.dg/lto/20081224_0.c: Update LTO options.
	* gcc.dg/lto/20090219_0.c: Update LTO options.
	* gcc.dg/lto/ipareference2_0.c: Update LTO options.
	* gcc.dg/lto/20090206-2_0.c: Update LTO options.
	* gcc.dg/lto/20081115_0.c: Update LTO options.
	* gcc.dg/lto/20081201-2_0.c: Update LTO options.
	* gcc.dg/lto/20081120-2_0.c: Update LTO options.
	* gcc.dg/lto/materialize-1_0.c: Update LTO options.
	* gcc.dg/lto/20090126-1_0.c: Update LTO options.
	* gcc.dg/lto/20081202-1_0.c: Update LTO options.
	* gcc.dg/lto/noreturn-1_0.c: Update LTO options.
	* g++.dg/20090107-1.C: Update LTO options.
	* g++.dg/lto/pr45679-2_0.C: Update LTO options.
	* g++.dg/lto/20081123_0.C: Update LTO options.
	* g++.dg/lto/20090313_0.C: Update LTO options.
	* g++.dg/lto/20081125_0.C: Update LTO options.